# fastapi-reflect

./: .gitignore  Justfile  README.md  docker-compose.yml  pyproject.toml
src/fastapi_reflect/: main.py  schema.py
src/fastapi_reflect/agents/: api_agent.py  config.py  sql_agent.py  tools.py
src/fastapi_reflect/datastore/: __init__.py  repository.py
src/fastapi_reflect/repositories/: songs.py
src/fastapi_reflect/services/: ai.py  docs.py  songs.py
src/fastapi_reflect/transport/: __init__.py  ai.py  songs.py
src/fastapi_reflect/types/: ai.py  songs.py
