[project]
name = "fastapi-reflect"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic",
    "pydantic-ai",
    "logfire[psycopg2,sqlalchemy]",
    "fastapi[standard]",
    "opentelemetry-instrumentation-fastapi",
    "sqlmodel>=0.0.22",
    "psycopg2>=2.9.10",
]

[tool.uv]
dev-dependencies = [
    "ruff",
    "typing-extensions>=4.12.2",
]
